--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RecordKeeper"
         tools:targetApi="31">
+        <activity android:name=".cardio.EditRunningRecordActivity" />
         <activity
-            android:name=".EditLiftingRecordActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".EditRunningRecordActivity"
+            android:name=".lifting.EditLiftingRecordActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
