--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.RecordKeeper"
         tools:targetApi="31">
         <activity android:name=".cardio.EditRunningRecordActivity" />
+        <activity android:name=".editrecord.EditRecordActivity" />
         <activity
             android:name=".lifting.EditLiftingRecordActivity"
             android:exported="false"
