--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RecordKeeper"
         tools:targetApi="31">
-        <activity android:name=".cardio.EditRunningRecordActivity" />
-        <activity android:name=".editrecord.EditRecordActivity" />
         <activity
-            android:name=".lifting.EditLiftingRecordActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:name=".editrecord.EditRecordActivity"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
